# sapodilla

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  protocol.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.yaml
scripts/: build-wasm32-unknown-unknown_web-workers.sh  prepare-wasm32-unknown-unknown_none.sh  prepare-wasm32-unknown-unknown_web-workers.sh  prepare-x86_64-unknown-linux-gnu_none.sh
src/: app.rs  cut.rs  lib.rs  main.rs  protocol.rs
src/transports/: mock.rs  mod.rs  web_serial.rs
src/views/: canvas.rs  mod.rs
static/: _headers
