[package]
name = "sapodilla"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
byteorder = "1.5.0"
derive_more = { version = "2.0.1", features = ["debug"] }
eframe = { version = "0.32.3", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["image", "syntect"] }
enum_dispatch = "0.3.13"
futures = "0.3"
hex = "0.4.3"
hex-literal = "1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
oneshot = "0.1"
packed_struct = "0.10"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1"
web-sys = { version = "0.3", features = [
    "Serial",
    "SerialPort",
    "SerialPortInfo",
    "SerialOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Performance",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "Window",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
tracing-subscriber = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4.50"
wasm-tracing = "2.1.0"
web-sys = "0.3.70"
uuid = { version = "1.18.1", features = ["v4", "js"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
